<resources>

    <string name="app_name">Find My Bus</string>

    <!-- My Strings For Home Page -->
    <string name="find">Find Bus Using</string>
    <string name="bus">Bus Name</string>
    <string name="stage">Stage Name</string>
    <string name="stages">Two Stages</string>
    <string name="help">Helpline</string>
    <string name="ad">Advertisements</string>
    <string name="load">Loading…</string>

    <!-- My Strings For Drawer Menu -->
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="share">Share</string>
    <string name="rate">Rate Now</string>
    <string name="remove_ad">Remove ads</string>

    <!-- My Strings For Options Menu -->
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

</resources>