<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/topColor"
        android:background="#2C387E"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bottomColor"
        android:layout_below="@id/topColor"
        android:background="#C8E7FF"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:textSize="16dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                tools:ignore="SpUsage" />

            <GridLayout
                android:id="@+id/gridlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/find"
                android:columnCount="2">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardElevation="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/bus"
                            android:contentDescription="@string/bus"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bus"
                            android:textSize="14dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="-2dp"
                            tools:ignore="SpUsage"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    app:cardElevation="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/stage"
                            android:contentDescription="@string/bus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stage"
                            android:textSize="14dp"
                            tools:ignore="SpUsage"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="-2dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    app:cardElevation="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/stages"
                            android:contentDescription="@string/bus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stages"
                            android:textSize="14dp"
                            tools:ignore="SpUsage"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="-2dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardElevation="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/help"
                            android:contentDescription="@string/bus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/help"
                            android:textSize="14dp"
                            tools:ignore="SpUsage"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="-2dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </GridLayout>

            <TextView
                android:id="@+id/ad_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gridlayout"
                android:layout_margin="15dp"
                android:text="@string/ad"
                android:layout_centerHorizontal="true"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ad_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ad_title"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>